# codegen-ikigai

./: README.md  hatch.toml  pyproject.toml
.github/workflows/: test.yml
src/codegen_ikigai/: __about__.py  __main__.py
src/codegen_ikigai/cli/: __init__.py
tests/: __init__.py
