[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegen-ikigai"
dynamic = ["version"]
description = 'Generate ikigai python library code from flow definitions'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Harsh Parekh", email = "harsh_parekh@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/unknown/codegen-ikigai#readme"
Issues = "https://github.com/unknown/codegen-ikigai/issues"
Source = "https://github.com/unknown/codegen-ikigai"

[project.scripts]
codegen-ikigai = "codegen_ikigai.cli:codegen_ikigai"

[tool.hatch.version]
path = "src/codegen_ikigai/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/codegen_ikigai tests}"

[tool.coverage.run]
source_pkgs = ["codegen_ikigai", "tests"]
branch = true
parallel = true
omit = [
  "src/codegen_ikigai/__about__.py",
]

[tool.coverage.paths]
codegen_ikigai = ["src/codegen_ikigai", "*/codegen-ikigai/src/codegen_ikigai"]
tests = ["tests", "*/codegen-ikigai/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
