[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegen-ikigai"
dynamic = ["version"]
description = 'Generate ikigai python library code from flow definitions'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Harsh Parekh", email = "harsh_parekh@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click==8.3.1",
]

[project.urls]
Documentation = "https://github.com/hXtreme/codegen-ikigai#readme"
Issues = "https://github.com/hXtreme/codegen-ikigai/issues"
Source = "https://github.com/hXtreme/codegen-ikigai"

[project.scripts]
codegen-ikigai = "codegen_ikigai.cli:codegen_ikigai"

[tool.coverage.run]
source_pkgs = ["codegen_ikigai", "tests"]
branch = true
parallel = true
omit = [
  "src/codegen_ikigai/__about__.py",
]
patch = ["_exit", "subprocess"]

[tool.coverage.paths]
codegen_ikigai = ["src/codegen_ikigai", "*/codegen-ikigai/src/codegen_ikigai"]
tests = ["tests", "*/codegen-ikigai/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
